name:                rasa-ext-nano
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rasa-ext-nano#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rasa.Ext.Nano
  build-depends:       base >= 4.7 && < 5
                     , rasa
                     , rasa-ext-views
                     , rasa-ext-cursors
                     , rasa-ext-files
                     , yi-rope
  default-language:    Haskell2010

executable rasa-ext-nano-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    , rasa
                    , rasa-ext-views
                    , rasa-ext-vim
                    , rasa-ext-style
                    , rasa-ext-cursors
                    , rasa-ext-status-bar
                    , rasa-ext-logger
                    , rasa-ext-files
                    , rasa-ext-slate
                    , lens
                    , mtl
                    , rasa-ext-nano
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rasa-ext-nano
